[metadata]
name = visionmetrics
version = 0.0.1
description = Evaluation metric codes for various vision tasks.
long_description = file: README.md
long_description_content_type = text/markdown
author = Microsoft
license = MIT
url = https://github.com/microsoft/visionmetrics

[options]
packages = find_namespace:
python_requires = >= 3.10
install_requires =
    numpy
    torch
    torchmetrics[detection]

[options.packages.find]
exclude =
    test*

[flake8]
exclude = .git,build,dist,*venv,.idea
max-line-length = 200
per-file-ignores = __init__.py:F401
