[metadata]
name = visionmetrics
version = 0.0.3
description = Evaluation metric codes for various vision tasks.
long_description = file: README.md
long_description_content_type = text/markdown
author = Microsoft
license = MIT
url = https://github.com/microsoft/visionmetrics

[options]
packages = find_namespace:
python_requires = >= 3.8
install_requires =
    numpy
    torch
    torchmetrics[detection]==0.11.4
    opencv-python-headless
    Pillow>=6.2.2

[options.packages.find]
exclude =
    test*

[options.extras_require] 
caption = 
    pycocoevalcap
    pycocotools
    install-jdk

[flake8]
exclude = .git,build,dist,*venv,.idea
max-line-length = 200
per-file-ignores = __init__.py:F401
