[metadata]
name = visionmetrics
version = 0.0.19
description = Evaluation metric codes for various vision tasks.
long_description = file: README.md
long_description_content_type = text/markdown
author = Microsoft
license = MIT
url = https://github.com/microsoft/visionmetrics

[options]
packages = find_namespace:
python_requires = >= 3.10
install_requires =
    numpy
    torch
    torchmetrics[detection]~=1.2.1
    opencv-python-headless
    Pillow>=6.2.2
    irisml-tasks-azure-openai

[options.packages.find]
exclude =
    test*

[options.extras_require] 
caption = 
    pycocoevalcap
    pycocotools
dev = 
    pre-commit
    flake8
    isort
    pytest

[flake8]
exclude = .git,build,dist,*venv,.idea
max-line-length = 200
per-file-ignores = __init__.py:F401
